# naia-os

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  TRANSLATING.md  cosign.pub  itch-io-description.md  package-lock.json  package.json
.agents/context/: agents-rules.json  architecture.yaml  bazzite-rebranding.yaml  brand.yaml  careti-reuse.yaml  channels-discord.yaml  charter-draft.yaml  contributing.yaml  demo-video.yaml  distribution.yaml  donation.yaml  gateway-sync.yaml  hardware-tiers.yaml  harness.yaml  i18n.yaml  lessons-learned.yaml  model-strategy.yaml  open-source-operations.yaml  openclaw-sync.yaml  phase3-plan.yaml  philosophy.yaml  plan.yaml  project-index.yaml  provider-development-guide.yaml  testing.yaml  translating.yaml  update-pipeline.yaml  upstream-contribution.yaml  vision.yaml
.agents/metrics/: 2026-W13-scorecard.md
.agents/profiles/: _base.yaml  (+8 more)
.claude/: settings.json
.github/: FUNDING.yml
READMES/: README.ar.md  README.bn.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.vi.md  README.zh.md
agent/: biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: 2026-03-02-rsync-exit-code-23-install-fix.md  2026-03-03-gen-grub-cfgstub-bootloader-fix.md  2026-03-03-liveinst-firefox-and-plymouth-fix.md  2026-0304-hook-modification-audit.md  ai-development-guide.md  ai-native-opensource-operations-report.md  diagnosis-2026-02-28-korean-input-and-openclaw.md  flathub-submission-guide.md  panel-development-guide.md
flatpak/: com.cafelua.shell.yml  io.nextain.naia.desktop  io.nextain.naia.metainfo.xml  io.nextain.naia.yml
flatpak-repo/: summary  summary.idx
gateway/: package.json  pnpm-lock.yaml
installer/: hook-post-rootfs.sh
recipes/: recipe.yml
releases/: v0.1.1.yaml  v0.1.2.yaml  v0.1.3.yaml
scripts/: dev-setup.mjs  dev-setup.sh  flatpak-clean-rebuild-and-run.sh  flatpak-rebuild-and-run.sh  install-gateway.sh  local-reinstall-run-naia-flatpak.sh  set-deep-link-handler.sh  test-node-discovery.mjs  test-windows-app-e2e.mjs  test-windows-e2e.mjs  test-wsl-full-setup.mjs  test-wsl-setup.mjs
shell/: .env.sample  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.setup.ts
shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.linux.json  tauri.conf.windows.json
shell/src-tauri/.cargo/: config.toml
shell/src-tauri/capabilities/: default.json
shell/src-tauri/icons/: icon.icns
shell/src-tauri/plugins/tauri-plugin-stt/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs  package.json
shell/src-tauri/plugins/tauri-plugin-stt/permissions/schemas/: schema.json
shell/src-tauri/plugins/tauri-plugin-stt/src/: desktop.rs  lib.rs  models.rs  stub.rs
shell/src-tauri/src/: browser.rs  lib.rs  main.rs  memory.rs  panel.rs  pty.rs  stt_models.rs  workspace.rs  wsl.rs
shell/src-tauri/src/platform/: linux.rs  mod.rs  windows.rs  wsl.rs
work-logs/: 20260215-01-bluebuild-pipeline-setup.md  20260215-01-cafelua-os-vision-research.md  20260215-02-usb-boot-manual.md  20260217-01-phase3-openclaw-integration.md  20260217-02-phase4-gateway-setup.md  20260219-01-cafelua-os-phase5-7-review.md  20260219-01-phase4-manual-test-and-next.md  20260219-02-cafelua-os-ux-improvements.md  20260219-03-openclaw-skill-gap-closure.md  20260219-04-ui-e2e-openclaw-100-coverage.md  20260220-01-ui-e2e-handoff.md  20260220-02-e2e-token-and-ui-trace.md  20260220-03-e2e-semantic-assertion-rewrite.md  20260220-05-e2e-messenger-scenarios.md  20260220-06-manual-update.md  20260221-01-discord-googlechat-integration.md  20260221-02-status-and-todo.md  20260221-03-rebranding-nan-os.md  20260221-05-plan.md  20260221-06-architecture-and-next-steps.md  20260222-01-flatpak-release-and-download-page.md  20260223-01-white-screen-egl-fix.md  e2e-handoff.md  naia-shell-diagnosis.md
(+830 files in other folders)
