[package]
name = "cafelua-shell"
version = "0.1.0"
description = "Cafelua Shell - AI Avatar Desktop"
authors = ["Luke"]
edition = "2021"

[lib]
name = "cafelua_shell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
