[package]
name = "naia-shell"
version = "0.1.2"
description = "Naia Shell - AI Avatar Desktop"
authors = ["Luke"]
edition = "2021"

[lib]
name = "naia_shell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["sync", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
url = "2"
libc = "0.2"
getrandom = "0.3"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-stt = { path = "plugins/tauri-plugin-stt" }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
